# swm-graphics-engine

./: CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: Camera.cpp.BCDA00314806E273.idx  Camera.h.31856F71A52405B5.idx  Canvas.cpp.852CF5DB86CBB221.idx  Canvas.h.AB321F8A9F91CF38.idx  Color.h.9C0A21FD13CFA56E.idx  CommandBuffer.cpp.1A8903CF022E475A.idx  CommandBuffer.h.A28299C837D082E4.idx  EngineBackend.h.81B1C9809EE520F8.idx  EngineConfiguration.h.3E9F0AEAE55FCDDE.idx  EngineContext.cpp.D890733FA2638B70.idx  EngineContext.h.84EF9685EB869683.idx  EngineServices.cpp.49849633B8B8A619.idx  EngineServices.h.5B81EF17C80B1E38.idx  EngineVersion.cpp.F39C80C5D183EE1F.idx  EngineVersion.h.7F8938119A4A1C5B.idx  Frame.cpp.88CB7D38EA7212ED.idx  Frame.h.7FF6B43AD139388C.idx  FrameClock.cpp.5CD28D9EB5FCE268.idx  FrameClock.h.CD46B3E35EE6B93F.idx  FrameRate.h.70956D5C9B8EF661.idx  (+37 more)
include/swm/: EngineBackend.h  EngineConfiguration.h  EngineVersion.h  Frame.h  GraphicsEngine.h  PixelFormat.h
src/core/: EngineContext.cpp  EngineContext.h  EngineServices.cpp  EngineServices.h  EngineVersion.cpp  FrameClock.cpp  FrameClock.h  GraphicsEngine.cpp  RenderScheduler.cpp  RenderScheduler.h
src/render/: CommandBuffer.cpp  CommandBuffer.h  Frame.cpp  IRenderer.h  RenderCommand.h  RenderCompiler.cpp  RenderContext.cpp  RenderContext.h  RenderTarget.cpp  RenderTarget.h  RenderTree.cpp  RenderTree.h  RendererFactory.cpp  RendererFactory.h  SceneCompiler.cpp
src/resources/: ResourceManager.cpp
src/scene/: Camera.cpp  Canvas.cpp  Group.cpp  Layer.cpp  Node.cpp  Scene.cpp
(+61 files in other folders)
